test/files/neg/t7294b.scala
class C extends Tuple2[Int, Int](0, 0)